[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[project]
name = "draive"
description = "Framework designed to simplify and accelerate the development of LLM-based applications."
version = "0.86.3"
readme = "README.md"
maintainers = [
  { name = "Kacper Kaliński", email = "kacper.kalinski@miquido.com" },
]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Typing :: Typed",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
license = { file = "LICENSE" }
dependencies = ["numpy~=2.2", "haiway~=0.34.4"]

[project.urls]
Homepage = "https://miquido.com"
Repository = "https://github.com/miquido/draive.git"

[project.optional-dependencies]
cohere = ["cohere~=5.17"]
cohere_bedrock = ["cohere~=5.17", "boto3~=1.40"]
openai = ["openai~=1.104"]
openai_realtime = ["openai[realtime]~=1.104"]
anthropic = ["anthropic~=0.64"]
anthropic_bedrock = ["anthropic[bedrock]~=0.64"]
mistral = ["mistralai~=1.9"]
gemini = ["google-genai~=1.30", "google-api-core"]
ollama = ["ollama~=0.5"]
bedrock = ["boto3~=1.40"]
vllm = ["openai~=1.104"]
mcp = ["mcp~=1.9"]
opentelemetry = [
  "haiway[opentelemetry]",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp-proto-grpc",
]
httpx = ["haiway[httpx]", "httpx"]
postgres = ["haiway[postgres]", "asyncpg"]
dev = [
  "bandit~=1.8",
  "pyright~=1.1",
  "pytest~=8.3",
  "pytest-asyncio~=1.1",
  "pytest-cov~=7.0",
  "ruff~=0.13",
]
docs = ["mkdocs~=1.6", "mkdocs-material~=9.5", "mkdocstrings[python]~=0.27"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", ".git", ".cache"]
lint.select = ["E", "F", "A", "I", "B", "PL", "W", "C", "RUF", "UP", "NPY201"]
lint.ignore = ["A005", "PLC0415"]
lint.pydocstyle.convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"./tests/*.py" = ["PLR2004"]

[tool.ruff.lint.pylint]
max-args = 12

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["./src"]
exclude = ["**/node_modules", "**/__pycache__"]
stubPath = "./stubs"
reportMissingImports = true
reportMissingTypeStubs = false
userFileIndexingLimit = -1
useLibraryCodeForTypes = true

[tool.pyright.analysis]
diagnosticMode = "workspace"
typeCheckingMode = "strict"

[tool.uv-build]
packages = [{ include = "draive", from = "src" }]

[tool.uv-build.sdist]
exclude = [
  "site",
  "docs",
  "tests",
  ".github",
  "stubs",
  "config",
  "llms.txt",
  ".vscode",
  ".claude",
  ".codex",
  ".zed",
  ".venv",
  "**/.DS_Store",
  "**/__pycache__",
  ".ruff_cache",
  ".pytest_cache",
  ".mypy_cache",
]

[tool.uv-build.wheel]
exclude = ["**/.DS_Store", "**/__pycache__", "**/*.pyc"]
